Build rpm/deb package after building jar